--- a/about-us.html
+++ b/about-us.html
@@ -15,7 +15,7 @@
 
 
     <link rel="stylesheet" href="style.css">
-    <title>Be Jewel</title>
+    <title>The Shop - About Us</title>
 </head>
 
 <body>
