--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
 
 
     <link rel="stylesheet" href="style.css">
-    <title>Be Jewel</title>
+    <title>The Shop - Contact</title>
 </head>
 
-<body>
+<body class="contact">
     <header>
         <div class="container-fluid d-flex align-items-center justify-content-between pt-4 pb-5 px-5">
             <div class="logo"><img src="/image/logo.png" alt=""></div>
@@ -45,12 +45,34 @@
 
         </div>
     </header>
-    
-    <section class="products__title">
+    <section class="title">
         <div class="container">
-           <h2 class="text-center display-2">Contact Us</h2>
+            <h2 class="text-center display-2">Contact Us</h2>
         </div>
-       
+    </section>
+    <section class="main">
+        <div class="container">
+            <div class="row">
+                <div class="contact__title-column col-lg-6">
+                    <div class="contact__title-container">
+                        <h2 class="contact__title-title">Do you have any questions?</h2>
+                        <p class="contact__title-subtitle">libero pharetra</p>
+                        <p class="contact__title-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Nulla mauris dolor, gravida a varius blandit, auctor eget purus. Phasellus scelerisque
+                            sapien sit amet mauris laoreet.</p>
+                    </div>
+                    <h4>OUR ADDRESS</h4>
+                    <p>Level 13, 2 Elizabeth St,
+                        Melbourne, Victoria 3000,
+                        Australia</p>
+                </div>
+                <i class="bi bi-phone"></i>+61 (0) 383 766 284
+                <i class="bi bi-envelope"></i> noreply@envato.com
+                <div class="main-column col-lg-6">
+                    <img class="main-image img-fluid" src="/image/contact-us.jpg" alt="">
+                </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="container">
