--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <link rel="stylesheet" href="style.css">
-    <title>Be Jewel</title>
+    <title>The Shop - Home</title>
 </head>
 
 <body>
