--- a/contact.html
+++ b/contact.html
@@ -65,14 +65,44 @@
                     <p>Level 13, 2 Elizabeth St,
                         Melbourne, Victoria 3000,
                         Australia</p>
+                    <p> <i class="bi bi-phone"></i>+61 (0) 383 766 284</p>
+                    <p><i class="bi bi-envelope"></i> noreply@envato.com</p>
                 </div>
-                <i class="bi bi-phone"></i>+61 (0) 383 766 284
-                <i class="bi bi-envelope"></i> noreply@envato.com
+
                 <div class="main-column col-lg-6">
                     <img class="main-image img-fluid" src="/image/contact-us.jpg" alt="">
                 </div>
             </div>
         </div>
+    </section>
+    <section class="contact-form">
+        <div class="container">
+            <h2>Send Us a Message</h2>
+            <form>
+                <div class="form-group">
+                    <div>
+                        <input type="text" class="form-control" id="email" aria-describedby="emailHelp"
+                            placeholder="Your Name">
+                    </div>
+                    <div>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                            placeholder="Enter email">
+                    </div>
+                    <div>
+                        <input type="text" class="form-control" id="subject" aria-describedby="emailHelp"
+                            placeholder="Subject">
+                    </div>
+                    <div>
+                        <input type="text" class="form-control" id="subject" aria-describedby="emailHelp"
+                            placeholder="Subject">
+                    </div>
+                    <div>
+                        <textarea class="form-control" id="textarea" rows="3" placeholder="Message"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+
     </section>
     <footer>
         <div class="container">
